// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_package = "ohos.devtools.datasources.transport.grpc.service";
option optimize_for = LITE_RUNTIME;

message SliceObj {
    int32 id = 1;
    string name = 2;
}

message SliceInfo {
    int32 id = 1;
    int32 value = 2;
    uint64 start_time = 3;
    uint64 end_time = 4;
}

message CounterObj {
    int32 id = 1;
    string name = 2;
}

message CounterInfo {
    int32 key = 1;
    int32 value = 2;
    uint64 ts = 3;
}

message MockData {
    repeated CounterObj counterobj = 1;
    repeated CounterInfo counterinfo = 2;
    repeated SliceObj sliceobj = 3;
    repeated SliceInfo sliceinfo = 4;
}

message MockDataArr {
    repeated MockData mockdata = 1;
}
